versioned_docs/version-1.0/client-api/querying/static-indexes/customizing-results-order.mdx
---
title: "Customizing results order using SortOptions"
hide_table_of_contents: true
sidebar_label: Customizing results order using SortOptions
sidebar_position: 1
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Customizing results order using SortOptions

Indexes in RavenDB are lexicographically sorted by default, so all queries return results which are ordered lexicographically. When putting a static index in RavenDB, you can specify custom sorting requirements, to ensure results are sorted the way you want them to.

## Native types

Dates are written to the index in a form which preserves lexicography order, and is readable by both human and machine (like so: `2011-04-04T11:28:46.0404749+03:00`), so this requires no user intervention, too.

Numerical values, on the other hand, are stored as text and therefore require the user to specify explicitly what is the number type used so a correct sorting mechanism is enforced. This is quite easily done, by declaring the required sorting setup in `SortOptions` in the index definition:

<TabItem value="static_sorting1" label="static_sorting1">
<CodeBlock language="csharp">
{`public class SampleIndex1 : AbstractIndexCreationTask<Customer, Customer>
\{
	public SampleIndex1()
	\{
		Map = users => from user in users select new \{ user.Age \};

		Sort(x => x.Age, Raven.Abstractions.Indexing.SortOptions.Short);
	\}
\}
`}
</CodeBlock>
</TabItem>

The index outlined above will allow sorting by value on the user's age (1, 2, 3, 11, etc). If we wouldn't specify this option, it would have been sorted lexically (1, 11, 2, 3, etc).

The default `SortOptions` value is `String`. Appropriate values available for all numeric types (`Byte`, `Double`, `Float`, `Int`, `Long` and `Short`).

## Collation support

RavenDB supports using collations for documents sorting and indexing. You can setup a specific collation for an index field, so you can sort based of culture specific rules.

The following is an example of an index definition which allows sorting based on the Swedish lexical sorting rules:

<TabItem value="static_sorting2" label="static_sorting2">
<CodeBlock language="csharp">
{`public class SampleIndex2 : AbstractIndexCreationTask<Customer, Customer>
\{
	public SampleIndex2()
	\{
		Map = users => from doc in users select new \{ doc.Name \};

		Sort(x => x.Name, Raven.Abstractions.Indexing.SortOptions.String);

		Analyzers.Add(x => x.Name, "Raven.Database.Indexing.Collation.Cultures.SvCollationAnalyzer, Raven.Database");
	\}
\}
`}
</CodeBlock>
</TabItem>

In general, you can sort using `[two-letters-culture-name]CollationAnalyzer`, and all the cultures supported by the .NET framework are supported.